WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231061
REGRESSION(
242280@main
) fast/mediastream/captureStream/canvas3d.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=231061
Summary
REGRESSION(242280@main) fast/mediastream/captureStream/canvas3d.html is timin...
Lauro Moura
Reported
2021-09-30 21:15:13 PDT
fast/mediastream/captureStream/canvas3d.html Started timing out in
242280@main
Likely due to empty GraphicsContextGLOpenGL::paintCompositedResultsToMediaSample() implementation? (New method added in this revision).
Attachments
Patch
(3.39 KB, patch)
2021-10-17 03:57 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(3.41 KB, patch)
2021-10-26 07:26 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-07 21:16:15 PDT
<
rdar://problem/84012523
>
Philippe Normand
Comment 2
2021-10-17 03:57:04 PDT
Created
attachment 441530
[details]
Patch
EWS
Comment 3
2021-10-26 07:09:12 PDT
Tools/Scripts/svn-apply failed to apply
attachment 441530
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Philippe Normand
Comment 4
2021-10-26 07:26:39 PDT
Created
attachment 442487
[details]
Patch
EWS
Comment 5
2021-10-26 08:23:20 PDT
Committed
r284867
(
243544@main
): <
https://commits.webkit.org/243544@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442487
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug