REGRESSION(242280@main) fast/mediastream/captureStream/canvas3d.html is timing out https://bugs.webkit.org/show_bug.cgi?id=231061 <rdar://problem/84012523>

Patch by Philippe Normand <pnormand@igalia.com> on 2021-10-26
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

Implement WebGL canvas sampling for GStreamer ports.

* platform/graphics/opengl/GraphicsContextGLOpenGL.cpp:
(WebCore::GraphicsContextGLOpenGL::paintCompositedResultsToMediaSample):

LayoutTests:

* platform/glib/TestExpectations: Test is passing now. Unflag.

Canonical link: https://commits.webkit.org/243544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284867 268f45cc-cd09-0410-ab3c-d52691b4dbfc